[Add] GameRoomHandler - Create

--- a/handler/Makefile
+++ b/handler/Makefile
@@ -1,5 +1,5 @@
 INCLUDE = -I../../CppServerTools/epoll/ -I../../CppServerTools/socket/ -I../../CppServerTools/struct/ -I../../CppServerTools/epoll/ -I../../CppServerTools/packet/basepacket -I../../CppServerTools/log/ -I../info/ -I../struct/ -I../manager/
-MAKE_HANDLER = EchoPacketHandler.o
+MAKE_HANDLER = EchoPacketHandler.o GameRoomHandler.o
 CC = g++ -g
 
 #Init
@@ -16,4 +16,7 @@ clean:
 
 #MAKE_HANDLER
 EchoPacketHandler.o: EchoPacketHandler.cpp
+	$(CC) $(INCLUDE) -c $^
+
+GameRoomHandler.o: GameRoomHandler.cpp
 	$(CC) $(INCLUDE) -c $^
